--- a/DbBackupper/View/DumpFormatView.xaml
+++ b/DbBackupper/View/DumpFormatView.xaml
@@ -5,9 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:model="clr-namespace:Swsu.Tools.DbBackupper.Model"
+             xmlns:properties="clr-namespace:Swsu.Tools.DbBackupper.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="400">
-	<GroupBox Header="Формат файла">
+	<GroupBox Header="{x:Static properties:Resources.FileFormat}">
 		<GroupBox.Resources>
 			<ObjectDataProvider MethodName="GetValues" ObjectType="{x:Type sys:Enum}" x:Key="FileFormatValues">
 				<ObjectDataProvider.MethodParameters>
