--- a/DbBackupper/View/MainView.xaml
+++ b/DbBackupper/View/MainView.xaml
@@ -4,140 +4,43 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModel="clr-namespace:Swsu.Tools.DbBackupper.ViewModel"
-        xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-        xmlns:service="clr-namespace:Swsu.Tools.DbBackupper.Service"
         xmlns:view="clr-namespace:Swsu.Tools.DbBackupper.View"
+        xmlns:properties="clr-namespace:Swsu.Tools.DbBackupper.Properties"
         mc:Ignorable="d"
-        Title="Генератор резервных копий" Height="750" Width="900" MinWidth="900" MinHeight="700"
+        Title="{x:Static properties:Resources.ApplicationTitle}" Height="750" Width="900" MinWidth="900" MinHeight="700"
 		WindowStartupLocation="CenterScreen">
 
-    <Window.Resources>
-        <!-- *********************************************************************************************************** -->
+	<Window.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/Resources/CommonResources.xaml"/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Window.Resources>
 
-        <!-- *********************************************************************************************************** -->
-        <!-- ***************************************** GroupBox ******************************************************** -->
-        <BorderGapMaskConverter x:Key="BorderGapMaskConverter"/>
-        <Style x:Key="GeneralGroupBox" TargetType="{x:Type GroupBox}">
-            <Setter Property="BorderBrush" Value="Teal"/>
-            <Setter Property="BorderThickness" Value="1.5"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type GroupBox}">
-                        <Grid SnapsToDevicePixels="true">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="6"/>
-                                <ColumnDefinition Width="54.167"/>
-                                <ColumnDefinition Width="12.487"/>
-                                <ColumnDefinition Width="23*"/>
-                                <ColumnDefinition Width="38*"/>
-                                <ColumnDefinition Width="6"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="6"/>
-                            </Grid.RowDefinitions>
-                            <Border BorderBrush="Transparent" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Grid.ColumnSpan="6" Grid.Column="0" CornerRadius="4" Grid.Row="1" Grid.RowSpan="3" Margin="0"/>
-                            <Border BorderBrush="White" BorderThickness="{TemplateBinding BorderThickness}" Grid.ColumnSpan="6" CornerRadius="4" Grid.Row="1" Grid.RowSpan="3" Margin="0">
-                                <Border.OpacityMask>
-                                    <MultiBinding ConverterParameter="7" Converter="{StaticResource BorderGapMaskConverter}">
-                                        <Binding ElementName="Header" Path="ActualWidth"/>
-                                        <Binding Path="ActualWidth" RelativeSource="{RelativeSource Self}"/>
-                                        <Binding Path="ActualHeight" RelativeSource="{RelativeSource Self}"/>
-                                    </MultiBinding>
-                                </Border.OpacityMask>
-                                <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="3">
-                                    <Border BorderBrush="White" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="2"/>
-                                </Border>
-                            </Border>
-                            <Border x:Name="Header" BorderThickness="1" BorderBrush="#FF000CFF" Grid.Column="1" Padding="3,1,3,0" Grid.Row="0" Grid.RowSpan="2" Background="#FF5BF0E9" Grid.ColumnSpan="4" Margin="0,0,0.001,0" CornerRadius="4">
-                                <ContentPresenter ContentSource="Header" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                            </Border>
-                            <ContentPresenter Grid.ColumnSpan="4" Grid.Column="1" Margin="0, 5" Grid.Row="2" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <!-- ***************************************** TextBox ******************************************************** -->
-        <SolidColorBrush x:Key="TextBox.Static.Border" Color="BlueViolet"/>
-        <SolidColorBrush x:Key="TextBox.MouseOver.Border" Color="#FF7EB4EA"/>
-        <SolidColorBrush x:Key="TextBox.Focus.Border" Color="#FF569DE5"/>
+	<Window.DataContext>
+		<viewModel:MainViewModel x:Name="ViewModel"/>
+	</Window.DataContext>
 
-        <Style x:Key="ConnectionTextBox" TargetType="{x:Type TextBox}">
-            <!--            <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>-->
-            <Setter Property="Foreground" Value="DarkBlue"/>
-            <Setter Property="Background" Value="WhiteSmoke"/>
-            <Setter Property="BorderBrush" Value="{StaticResource TextBox.Static.Border}"/>
-            <Setter Property="BorderThickness" Value="2"/>
-            <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
-            <Setter Property="HorizontalContentAlignment" Value="Left"/>
-            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-            <Setter Property="AllowDrop" Value="true"/>
-            <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
-            <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Border x:Name="border" CornerRadius="4" VerticalAlignment="Center" BorderBrush="{TemplateBinding BorderBrush}" 
-        					BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
-                            <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Opacity" TargetName="border" Value="0.56"/>
-                            </Trigger>
-                            <Trigger Property="IsMouseOver" Value="true">
-                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.MouseOver.Border}"/>
-                            </Trigger>
-                            <Trigger Property="IsKeyboardFocused" Value="true">
-                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.Focus.Border}"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <MultiTrigger>
-                    <MultiTrigger.Conditions>
-                        <Condition Property="IsInactiveSelectionHighlightEnabled" Value="true"/>
-                        <Condition Property="IsSelectionActive" Value="false"/>
-                    </MultiTrigger.Conditions>
-                    <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
-                </MultiTrigger>
-            </Style.Triggers>
-        </Style>
+	<DockPanel>
+		<Button  DockPanel.Dock="Top" HorizontalAlignment="Right"
+					Width="48" Height="32" Padding="0" Margin="2, 2"
+					Command="{Binding Path=ChangeCultureCommand}">
+			<Button.ToolTip>
+				<ToolTip Content="{x:Static properties:Resources.ChangeLanguage}"/>
+			</Button.ToolTip>
+			<Image Style="{StaticResource FlagIconStyle}" Margin="0, 2, 0, 0"/>
+		</Button>
 
-        <!--<Style TargetType="TreeView">
-            <Setter Property="Background" Value="GhostWhite"/>
-            <Setter Property="Foreground" Value="GhostWhite"></Setter>
-        </Style>-->
+		<TabControl Background="Beige" >
+			<TabItem Header="{x:Static properties:Resources.BackupDump}">
+				<view:BackupView DataContext="{Binding Path=BackupViewModel}"/>
+			</TabItem>
 
-        <Style TargetType="{x:Type TextBox}">
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="3, 3"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Height" Value="25"/>
-        </Style>
-
-        <Style TargetType="{x:Type TextBlock}">
-            <Setter Property="VerticalAlignment" Value="Center"/>
-        </Style>
-    </Window.Resources>
-
-    <Window.DataContext>
-        <viewModel:MainViewModel x:Name="ViewModel"/>
-    </Window.DataContext>
-
-    <TabControl Background="Beige" >
-        <TabItem Header="Создать резервную копию БД">
-			<view:BackupView DataContext="{Binding Path=BackupViewModel}"/>
-		</TabItem>
-
-        <TabItem Header="Восстановить БД из резервной копии">
-			<view:RestoreView DataContext="{Binding Path=RestoreViewModel}"/>
-		</TabItem>
-    </TabControl>
+			<TabItem Header="{x:Static properties:Resources.RestoreDump}">
+				<view:RestoreView DataContext="{Binding Path=RestoreViewModel}"/>
+			</TabItem>
+		</TabControl>
+	</DockPanel>
 
 </Window>
