--- a/DbBackupper/View/RestoreView.xaml
+++ b/DbBackupper/View/RestoreView.xaml
@@ -7,6 +7,7 @@
              xmlns:view="clr-namespace:Swsu.Tools.DbBackupper.View"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:service="clr-namespace:Swsu.Tools.DbBackupper.Service"
+             xmlns:properties="clr-namespace:Swsu.Tools.DbBackupper.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="800" Background="AliceBlue">
 
@@ -25,7 +26,7 @@
 
 					<view:DumpFormatView/>
 
-					<GroupBox Header="Файл">
+					<GroupBox Header="{x:Static properties:Resources.File}">
 						<Grid>
 							<Grid.ColumnDefinitions>
 								<ColumnDefinition Width="Auto"/>
@@ -33,15 +34,16 @@
 								<ColumnDefinition Width="Auto"/>
 							</Grid.ColumnDefinitions>
 
-							<TextBlock Text="Расположение:" Margin="5"/>
+							<TextBlock Text="{x:Static properties:Resources.Location}" Margin="5"/>
 							<TextBox Grid.Column="1" Text="{Binding Path=DumpFileName}" IsReadOnly="True" Margin="5"/>
 							<Button Grid.Column="2" Width="30" Content=" . . . " Command="{Binding Path=CreateRestoreFileNameCommand}" Margin="5"/>
 						</Grid>
 					</GroupBox>
 
-					<Expander Header="Типы объектов">
+					<Expander Header="{x:Static properties:Resources.ObjectsTypes}">
 						<StackPanel Orientation="Vertical">
-							<CheckBox x:Name="OnlyDataCheckBox" Content="Только данные" IsChecked="{Binding Path=DataOnly}" Margin="5">
+							<CheckBox x:Name="OnlyDataCheckBox" Content="{x:Static properties:Resources.DataOnly}" 
+									  IsChecked="{Binding Path=DataOnly}" Margin="5">
 								<CheckBox.Style>
 									<Style TargetType="{x:Type CheckBox}">
 										<Setter Property="IsEnabled" Value="True"/>
@@ -57,7 +59,8 @@
 								</CheckBox.Style>
 							</CheckBox>
 
-							<CheckBox x:Name="OnlySchemaCheckBox" Content="Только схема" IsChecked="{Binding Path=SchemaOnly}" Margin="5">
+							<CheckBox x:Name="OnlySchemaCheckBox" Content="{x:Static properties:Resources.SchemaOnly}" 
+									  IsChecked="{Binding Path=SchemaOnly}" Margin="5">
 								<CheckBox.Style>
 									<Style TargetType="{x:Type CheckBox}">
 										<Setter Property="IsEnabled" Value="True"/>
@@ -76,15 +79,15 @@
 						</StackPanel>
 					</Expander>
 
-					<Expander Header="Параметры восстановления">
+					<Expander Header="{x:Static properties:Resources.RestoreSettings}">
 						<StackPanel Orientation="Vertical">
-							<CheckBox Content="Добавить CREATE DATABASE" Margin="5" IsChecked="{Binding Path=CreateDb}"/>
-							<CheckBox Content="Очистить перед восстановлением" Margin="5" IsChecked="{Binding Path=CleanDb}"/>
+							<CheckBox Content="{x:Static properties:Resources.AddCreateDb}" Margin="5" IsChecked="{Binding Path=CreateDb}"/>
+							<CheckBox Content="{x:Static properties:Resources.CleanBeforeRestore}" Margin="5" IsChecked="{Binding Path=CleanDb}"/>
 						</StackPanel>
 					</Expander>
 
-					<Button Content="Создать БД" Command="{Binding CreateDbCommand}" Margin="5"/>
-					<Button Content="Восстановить из резервной копии" Command="{Binding Path=RestoreBackupCommand}" Margin="5"/>
+					<Button Content="{x:Static properties:Resources.CreateDb}" Command="{Binding CreateDbCommand}" Margin="5"/>
+					<Button Content="{x:Static properties:Resources.RestoreFromDump}" Command="{Binding Path=RestoreBackupCommand}" Margin="5"/>
 				</StackPanel>
 			</ScrollViewer>
 		</Grid>
