Изменил интерфейс - перенес выбор типа бэкапа в диалоговое окно сохранения/загрузки

--- a/DbBackupper/View/BackupView.xaml
+++ b/DbBackupper/View/BackupView.xaml
@@ -21,7 +21,7 @@
 				<StackPanel Orientation="Vertical">
 					<view:ConnectionDetailsView/>
 
-					<view:DumpFormatView/>
+<!--					<view:DumpFormatView/>-->
 
 					<GroupBox Header="{x:Static properties:Resources.File}">
 						<Grid>
