--- a/DbBackupper/View/RestoreView.xaml
+++ b/DbBackupper/View/RestoreView.xaml
@@ -24,7 +24,7 @@
 				<StackPanel Orientation="Vertical">
 					<view:ConnectionDetailsView/>
 
-					<view:DumpFormatView/>
+<!--					<view:DumpFormatView/>-->
 
 					<GroupBox Header="{x:Static properties:Resources.File}">
 						<Grid>
